<resources>
    <string name="app_name">Profile</string>
    <string name="avatar_title">Select Avatar</string>
    <string name="profile_title">User profile</string>
    <string name="profile_save">Save profile</string>
    <string name="avatar_select">Select avatar</string>
    <string name="lblName">Name (*)</string>
    <string name="hint_name">(name)</string>
    <string name="lblEmail">Email (*)</string>
    <string name="hint_email">(email)</string>
    <string name="lblTelefono">Phone Number (*)</string>
    <string name="hint_phone">(phone)</string>
    <string name="lblAdress">Address (*)</string>
    <string name="hint_address">(address)</string>
    <string name="lblWeb">Web (*)</string>
    <string name="hint_web">(web)</string>
    <string name="required">(*) Required</string>
    <string name="profile_invalid_name">Invalid name</string>
    <string name="profile_invalid_email">Invalid email</string>
    <string name="profile_invalid_phonenumber">Invalid phone number</string>
    <string name="profile_invalid_address">Invalid address</string>
    <string name="profile_invalid_web">Invalid web</string>
    <string name="toast">Profile saved</string>
    <string name="no_app_found">No valid app found</string>
</resources>
