<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlAvatar"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_marginBottom="@dimen/margin2"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/pikachu"></ImageView>

        <TextView
            android:id="@+id/lblAvatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imgAvatar"
            android:background="@color/avatar_label_background"
            android:gravity="center"
            android:text="Pikachu"
            android:textColor="@color/white"
            android:textSize="@dimen/txtName_size"></TextView>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/llForm"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">



        <LinearLayout
            android:id="@+id/llName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin2">

        <TextView
            android:id="@+id/lblName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblName"></TextView>

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZáéíóúÁÉÍÓÚ"
            android:hint="@string/hint_name"
            android:imeOptions="actionNext">
        </EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lblEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lblEmail"></TextView>

                <TextView
                    android:id="@+id/lblPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.73"
                    android:text="@string/lblTelefono"></TextView>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"></EditText>

            <ImageView
                android:id="@+id/imgEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.735"
                android:src="@drawable/ic_email_24dp"></ImageView>

            <EditText
                android:id="@+id/txtPhonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:inputType="phone"
                android:hint="@string/hint_phone"
                android:imeOptions="actionNext"></EditText>

            <ImageView
                android:id="@+id/imgPhonenumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.775"
                android:src="@drawable/ic_call_24dp"></ImageView>

        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/llAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin2">

            <TextView
                android:id="@+id/lblAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblAdress"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_address"
                    android:imeOptions="actionNext"></EditText>

                <ImageView
                    android:id="@+id/imgAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:src="@drawable/ic_map_24dp"></ImageView>

        </LinearLayout>


    </LinearLayout>


        <LinearLayout
            android:id="@+id/llWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin">

            <TextView
                android:id="@+id/lblWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblWeb"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtWeb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_web"
                    android:inputType="textWebEmailAddress"
                    android:imeOptions="actionDone"></EditText>

                <ImageView
                    android:id="@+id/imgWeb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:src="@drawable/ic_web_24dp"></ImageView>

            </LinearLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/lblRequired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/required"
            android:layout_marginBottom="@dimen/margin">
        </TextView>


</LinearLayout>

</LinearLayout>
